<resources>
    <string name="app_name">E-Commerce</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="create_account_detail">Aşağıdaki bilgilerini doldur veya sosyal medya hesabınla kayıt ol.</string>
    <string name="name">İsim</string>
    <string name="email">E-posta adresi</string>
    <string name="password">Parola</string>
    <string name="accept_terms_and_cond"><![CDATA[Şartları & Koşulları kabul ediyorum]]></string>
    <string name="or">Veya şunlarla kayıt ol</string>
    <string name="register">Kayıt Ol</string>
    <string name="guest">Misafir olarak devam et</string>
    <string name="hesabin_var_mi">Hesabın mı var? <b>Giriş Yap</b></string>
    <string name="hesabin_yok_mu">Hesabın yok mu? <b>Kayıt Ol</b></string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_in_detail">Merhaba! Tekrar hoşgeldin</string>
    <string name="remember_me">Beni hatırla</string>
    <string name="log_in">Giriş Yap</string>
    <string name="or_signin">Veya şunlarla giriş yap</string>
    <string name="web_client_id">41526600935-d6lkg1n2km0p3ubp08siqlabcaji8iml.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1108869413598455</string>
    <string name="fb_login_protocol_scheme">fb1108869413598455</string>
    <string name="facebook_client_token">ab924268c076be29b19b663f12a00c4f</string>
    <string name="sign_in_from">signInFrom</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="classic">classic</string>
    <string name="add_cart">Sepete Ekle</string>
    <string name="add_compare">Karşılaştırmaya ekle</string>
    <string name="search_brand_or_product">Marka, ürün veya kategori ara</string>
    <string name="complete_shopping">Alışverişi Tamamla</string>
    <string name="delete">Sil</string>
    <string name="kargo">Kargo:</string>
    <string name="total">Toplam:</string>
    <string name="empty_list">Sepetinizde ürün bulunmamaktadır</string>
    <string name="not_favorite">Favori ürününüz bulunmamaktadır</string>
    <string name="product_id">product_id</string>
    <string name="details">Ayrıntılar</string>
    <string name="toplam_fiyat">Toplam fiyat</string>
    <string name="verified">Doğrulanmış Satın Alım</string>
    <string name="empty_review">Değerlendirme bulunmamaktadır</string>
    <string name="adres">Adres</string>
    <string name="shipping">Kargo</string>
    <string name="payment_method">Yöntem</string>
    <string name="payment">Ödeme</string>
    <string name="continue_button">Devam Et</string>
    <string name="add_new_address">+ Yeni Bir Adres Ekle</string>
    <string name="oto_location">Konumu Otomatik Bul</string>
    <string name="save">Kaydet</string>
    <string name="address">Adres</string>
    <string name="address_title">Adres Başlığı</string>
    <string name="address_info">Adres Bilgileri</string>
    <string name="mng_kargo">MNG Kargo</string>
    <string name="aras_kargo">Aras Kargo</string>
    <string name="yurti_i_kargo">Yurtiçi Kargo</string>
    <string name="ptt_kargo">PTT Kargo</string>
    <string name="bank_or_credit_card">Kart Numarası</string>
    <string name="add_card">Kart Ekle</string>
    <string name="others">Diğer</string>
    <string name="kapida_odeme">Kapıda Ödeme</string>
    <string name="paypal">Paypal</string>
    <string name="confirm">Onayla</string>
    <string name="card_name">Kart Sahibi Adı</string>
    <string name="month">Ay</string>
    <string name="year">Yıl</string>
    <string name="cvv">CVV</string>
    <string name="save_card">Kartı Kaydet</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="bmk">BKM Express</string>
    <string name="massterpass_saved">Masterpass\'e kayıtlı kartınız bulunmaktadır.</string>
    <string name="wish_card">Kartınızı kullanmak ister misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="order_recieved">Sipariş Alındı!</string>
    <string name="transaction_time">İşlem Zamanı:</string>
    <string name="transaction_cost">İşlem Tutarı</string>
    <string name="card_number">Kart Numarası</string>
    <string name="validate">Lütfen 3D doğrulama şifresini onaylayın.</string>
    <string name="cancel_order">İptal Et</string>
    <string name="return_order">İade Et</string>
    <string name="send">Gönder</string>
    <string name="secure_3d">3D Secure ile Öde</string>
    <string name="save_mastercard">Kart bilgilerimi sonraki alışverişlerim için Mastercard alt yapısı ile saklamak istiyorum.</string>
    <string name="order_no">Sipariş No:</string>
    <string name="order_date">Sipariş Tarihi:</string>
    <string name="toplam">Toplam:</string>
    <string name="order_taken">Sipariş Alındı</string>
    <string name="order_prepare">Hazırlanıyor</string>
    <string name="delivered">Teslim Edildi</string>
    <string name="empty_order">Siparişiniz bulunmamaktadır.</string>
    <string name="payment_info">Ödeme Bilgileri</string>
    <string name="delivery_info">Teslimat Adresi</string>
    <string name="cargo_company">Kargo Firması</string>
    <string name="order_cancel_info">Siparişiniz iptal edilmiştir.</string>
    <string name="order_return_info">Siparişiniz iade edilmiştir.</string>
    <string name="contact">Bizimle İletişime Geçin</string>
    <string name="customer_explain">Bizim için önemlisiniz ve sizin deneyiminizi iyileştirmek için buradayız. Herhangi bir sorunuz, geri bildiriminiz veya yardım talebiniz varsa, lütfen çekinmeden bizimle iletişime geçin.</string>
    <string name="call_us">Bizi Arayın</string>
    <string name="fake_number">+90 212 582 05 64</string>
    <string name="fake_fax">+90 212 582 05 74(Fax)</string>
    <string name="send_email">Eposta Gönderin</string>
    <string name="fake_email">eticaretsitesi@gmail.com</string>
    <string name="write_your_review">Değerlendirmenizi Yazın</string>
    <string name="review_desc">Herhangi bir öneriniz, hatanın bildirimi veya genel bir geri bildiriminiz varsa, lütfen bize iletin.</string>
    <string name="review">Değerlendirme</string>
    <string name="geri_bildirim">Geri Bildirim</string>
    <string name="ai">Yapay Zeka Asistanı</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="customer_service">Müşteri Hizmetleri</string>
    <string name="code">222M229</string>
    <string name="category">Kategori</string>
    <string name="brand">Marka</string>
    <string name="price_range">Fiyat Aralığı</string>
    <string name="min">Minimum</string>
    <string name="max">Maksimum</string>
    <string name="four_five_and_above">4.5 ve üstü</string>
    <string name="four_and_four_five">4.0 - 4.5</string>
    <string name="three_five_and_four">3.5 - 4.0</string>
    <string name="three_and_three_five">3.0 - 3.5</string>
    <string name="two_five_and_three">2.5 - 3.0</string>
    <string name="two_and_two_five">2.0 - 2.5</string>
    <string name="reset">Sıfırla</string>
    <string name="apply">Uygula</string>
    <string name="should_move_to_filtered_fragment">shouldMoveToFilteredFragment</string>
    <string name="options">Seçenekler</string>
    <string name="speech">Lütfen, aramak istediğiniz ürünü sesli bir şekilde söyleyiniz</string>
    <string name="barcode">barcode</string>
    <string name="permission_needed">İzin gerekli</string>
    <string name="permission_need">Barkod taraması için kamera izni gerekli</string>
    <string name="product">Ürün</string>
    <string name="price">Fiyat</string>
    <string name="point">Puan</string>
    <string name="store">Mağaza</string>
    <string name="logout">Çıkış Yap</string>
    <string name="user_id">userId</string>
    <string name="notification_from">NotificationFrom</string>
    <string name="notif_shopping_cart">NotificationFromShoppingCart</string>
    <string name="notif_adds">NotificationFromAdds</string>
    <string name="opening_message">Merhaba! Size nasıl yardımcı olabilirim?</string>
    <string name="categories">Kategoriler</string>
</resources>