<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMasterpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    android:padding="18dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/warning" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/font_secondary"
        android:text="@string/having_saved_card" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/font_secondary"
        android:text="@string/wish_card" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginBottom="4dp"
        android:text="@string/yes"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/no"
        android:textSize="15sp"/>

</LinearLayout>