<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProfilePhoto"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="isim@gmail.com"
        android:textColor="@color/font_secondary"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@id/imageViewProfilePhoto"
        app:layout_constraintBottom_toBottomOf="@id/imageViewProfilePhoto"
        app:layout_constraintStart_toEndOf="@id/imageViewProfilePhoto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="12dp"
        android:text="@string/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/font_secondary"
        app:layout_constraintTop_toBottomOf="@id/textViewUserEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:layout_marginTop="30dp"
        android:text="@string/customer_service"
        android:textColor="@color/font_secondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textViewOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/my_orders"
        android:textColor="@color/font_secondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewSupport" />

    <TextView
        android:id="@+id/textViewChatBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/ai"
        android:textColor="@color/font_secondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrders" />

    <TextView
        android:id="@+id/textViewFeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/geri_bildirim"
        android:textColor="@color/font_secondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewChatBot" />

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textColor="@color/font_secondary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/textViewFeedBack" />

</androidx.constraintlayout.widget.ConstraintLayout>