<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBarCompare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Karşılaştır"
        app:navigationIcon="@drawable/vector"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Body1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:layout_gravity="end"
            android:paddingHorizontal="12dp"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/soft_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarCompare">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/product"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/font_secondary" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/price"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/font_secondary" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/point"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/font_secondary" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/store"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/font_secondary" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCompare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>